@@ -1,3 +1,4 @@
+* Allow sending email with existing attachments
 * Add paths and model context to action data
 * Add indentation in CSV export of tree
 * Manage which records to use for actions
